# noodle

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
modules/: CMakeLists.txt
modules/backend/: CMakeLists.txt  main.cpp
modules/backend/core/: noodle_export.hh  noodle_version.hh.in
